--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ li {
 }
 
 #section2 { 
-    background-color: white;
+    background-color: #f9faf8;
     margin: 0;
     padding: 50px;
     text-align: center;
@@ -92,7 +92,7 @@ li {
 
 #section2 .section2-container {
     display: flex;
-    background-color: white;
+    background-color: #f9faf8;
     margin: 0;
     flex-direction: row;
     justify-content: space-between;
@@ -130,11 +130,16 @@ li {
     font-size: 24px;
     color: #1f2937;
     font-weight: bold;
+}
 
 #section4 {
     
 }
 
 #footer {
-    
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   background-color: #1f2937;
+   color:#f9faf8;
 }
