--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 * {
-    font-family: "Courier New", cursive;
+    font-family: "Arial", cursive;
 }
 
 body {
@@ -57,7 +57,7 @@ li {
 #section1 .section1-header {
     color: #f9faf8;
     font-size: 48px;
-    font-weight: extra-bold;
+    font-weight: bold;
 
 }
 
@@ -73,6 +73,7 @@ li {
     background-color: #3882f6;
     border: solid 2px #f9faf8;
     width: 150px;
+    height: 30px;
     border-radius: 10px;
 
 }
@@ -122,7 +123,7 @@ li {
     font-size: 36px;
     color: #1f2937;
     font-style: italic; 
-    font-weight: lighter;  
+    font-weight: light;  
 }
 
 #section3 .section3-signature {
@@ -133,7 +134,22 @@ li {
 }
 
 #section4 {
-    
+    padding: 100px;
+}
+
+#section4 .section4-container {
+    border-radius: 10px;
+    background-color: #3882f6;
+    padding: 30px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+}
+
+#section4 .section4-container .section4-text {
+    color:#f9faf8;
 }
 
 #footer {
